# Template2

./: CMakeLists.txt  run.bat
func/: dino.cpp
include/: dino.h
src/: main.cpp
